name:                timeshifter
version:             0.2.0.0
synopsis:            Shift time entries in subrip files
homepage:            https://github.com/davesque/timeshifter
license:             MIT
license-file:        LICENSE
author:              David Sanders
maintainer:          davesque@gmail.com
category:            Text
build-type:          Simple
cabal-version:       >=1.8

executable timeshifter
  main-is:             Timeshifter.hs
  build-depends:       base ==4.5.*, containers ==0.4.*, nagari ==0.2.*, directory ==1.1.*,
                       MissingH ==1.2.*
